# schooladm

./: .gitignore  CMakeLists.txt  README.md
.zed/: debug.json
include/schooladm/: login.hpp  menu.hpp  reports.hpp  students.hpp  subjects.hpp  users.hpp  utilidades.hpp  utils.hpp
lib/listview/include/listview/: listview.h
lib/listview/src/: listview.c
reportes/: alumnos.csv  reporte.txt
src/: login.cpp  main.cpp  menu.cpp  reports.cpp  students.cpp  subjects.cpp  users.cpp  utilidades.cpp  utils.cpp
